test_outputs/connlist/exposure_test_multiple_unmatched_rules_connlist_output.txt
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255 : All Connections

Exposure Analysis Result:
any namespace with effect=NoSchedule => hello-world/workload-a[Deployment] : TCP 8050
any namespace with foo.com/managed-state=managed => hello-world/workload-a[Deployment] : TCP 8050
any namespace with release=stable => hello-world/workload-a[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255 : All Connections
hello-world/workload-a[Deployment] => entire-cluster : All Connections

Workloads which are not protected by network policies:
hello-world/workload-a[Deployment] is not protected on Egress
